[FIX/#88] PR 리뷰 반영 및 알림 발송 안정성 보강